# Loop-Closure-Detection-Based-on-Semantic-Templates

./: .gitignore  README.md  dataset_readME.txt  readMe.txt
BoW_ORB/: CMakeLists.txt
BoW_ORB/src/: BuildVoc.cc  DetectLoop.cc
Deeplab_colab_demo-main/: README.md  W1_SImplified_Kitti_Distorted(RAW)_of_Local_Zip_of_DeepLab_Demo.ipynb  local_of_SImplified_Kitti_Distorted(RAW)_of_Local_Zip_of_DeepLab_Demo.ipynb
Evaluation/: CMakeLists.txt  Evaluation.cpp  EvaluationORB.cc
Evaluation/include/: ORBextractor.h  imgCompare.h  templateExtractor.h
Evaluation/src/: BuildVoc.cc  ConPro.cpp  imgCompare.cpp  templateExtractor.cpp
MI/: CMakeLists.txt  ConPro.cpp  MI.cpp  MI_backup.cpp  projection.cpp  projection_3.cpp  readFiles.cpp
Opencv/: CMakeLists.txt  opencv_test.cpp
PTAM-GPL-master/Src/: PatchFinder.cc
Projection/: CMakeLists.txt  ConPro.cpp  MI.cpp  MI2.cpp  MI_backup.cpp  MI_post.cpp  projection.cpp  projection_backup.cpp
STM/: CMakeLists.txt  ConPro.cpp  ConPro222.cpp  ConPro333.cpp  MI.cpp  projection.cpp  sudoCode.py
STM/include/: templateFinder.h
TemplateMatching/: CMakeLists.txt  TM.cpp  TM_MI.cpp
helloworld/: CMakeLists.txt  Helloworld.cpp  multi_swap  opencv_test.cpp  swap.cpp
readPLY/: CMakeLists.txt  readPLY.cpp
slambook2-master/ch11/: CMakeLists.txt
test/: CMakeLists.txt  jialin.cpp  jialin2.cpp  test.cc
test-python/: Untitled-1.ipynb  download.py  test.py
