cmake_minimum_required(VERSION 3.0)
project(STM)

find_package(OpenCV REQUIRED )
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
# include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include)
# include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include ${OpenCV_INCLUDE_DIR} ${PCL_INCLUDE_DIRS})
# link_directories(${PCL_LIBRARY_DIRS})
# add_definitions(${PCL_DEFINITIONS})
# add_executable(projection projection.cpp)
add_executable(MI MI.cpp)
add_executable(ConPro ConPro.cpp)
# target_link_libraries(projection ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries(MI ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries(ConPro ${OpenCV_LIBS} ${PCL_LIBRARIES})

