cmake_minimum_required(VERSION 3.0)
project(TEST)
# set(CMAKE_CXX_FLAGS "{CMAKE_CXX_FLAGS} -std=c++11 -03")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIR})
add_executable(jialin_test jialin.cpp)
add_executable(jialin_test2 jialin2.cpp)
add_executable(test_cc test.cc)
target_link_libraries(jialin_test ${OpenCV_LIBS})
target_link_libraries(jialin_test2 ${OpenCV_LIBS})